Issue #12 - added licence in the landing page

--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
 		provided by a sparql endpoint into a corresponding 
 		RSS Atom feed (see <a href="https://tools.ietf.org/html/rfc4287" title"RSS Atom specificarion">RFC 4287</a>).
 		</p>
+		
 		<p>The current version must be launched as a script passed to the PHP
 		standalone interpreter and it parses the events in the <a href="http://opendatahacklab.github.io/data.html">opendatahacklab ontology</a>.
 		</p>
 		<p>See also (and subscribe if interested) the <a href="http://opendatahacklab.github.io/events/feed">generated feed</a> and
 		the <a href="RELAZIONE.odt">Techical Report (italian)</a>.</p>
-		
+		<p>The <code>rdfevents2rss.php</code> script is released under the <a href="http://opensource.org/licenses/LGPL-3.0">LGPL 3.0</a>
+			license.</p>
 	</section>
 
 	<section>
