--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>opendatahacklab - Events to RSS converter</title>
-		<link rel="stylesheet" type="text/css" href="http://opendatahacklab.github.io/odhl.css" />
+		<link rel="stylesheet" type="text/css" href="../commons/css/odhl.css" />
 </head>
 <body>
 	<header class="main-header">
-		<img class="logo" src="http://opendatahacklab.github.io//imgs/logo_cog4_ter.png" alt="the opendatahacklab logo" />
-		<h1>opendatahacklab - events to RSS converter</h1>
+		<img class="logo" src="../commons//imgs/logo_cog4_ter.png" alt="the opendatahacklab logo" />
+		<h1>opendatahacklab - events to RSS onverter</h1>
 		<p class="subtitle">THE OPEN DATA HACKING LABORATORY - Powered by 
-			<a href="http://github.com"><img alt="GitHub" src="http://opendatahacklab.github.io/imgs/GitHub_Logo.png" /></a>
-			<a href="http://dydra.com"><img alt="dydra.com" src="http://opendatahacklab.github.io/imgs/dydra-logo-24pt.png" /></a>
+			<a href="http://dydra.com"><img alt="dydra.com" src="../commons/imgs/dydra-logo-24pt.png" /></a>
+			<a class="wt-tech" target="_blank" href="http://wt-tech.it">WT-TECH</a>
 		</p>
 		<nav>
 			<ol class="breadcrumb">
@@ -19,7 +19,7 @@
 				<li><a href="http://opendatahacklab.github.io/projects.html">projects</a></li>
 				<li>events to rss converter</li>
 			</ol>
-			<a href="https://github.com/opendatahacklab/rdfevents2rss.git" alt="Source Code" title="GitHub repository"><img src="http://opendatahacklab.github.io/imgs/GitHub-Mark-64px.png" /></a>
+			<a href="https://github.com/opendatahacklab/rdfevents2rss.git" alt="Source Code" title="GitHub repository"><img src="../commons/imgs/GitHub-Mark-64px.png" /></a>
 		</nav>
 	</header>
 	<section>
