--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<p><code>rdfevents2rss.php</code> is a PHP script to convert a 
 		set of events (specified using the <a href="http://motools.sourceforge.net/event/event.html">Event Ontology</a>) 
 		provided by a sparql endpoint into a corresponding 
-		RSS Atom feed (see <a href="https://tools.ietf.org/html/rfc4287" title"RSS Atom specificarion">RFC 4287</a>).
+		RSS Atom feed (see <a href="https://tools.ietf.org/html/rfc4287" title="RSS Atom specificarion">RFC 4287</a>).
 		</p>
 		
 		<p>The current version must be launched as a script passed to the PHP
