--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<meta charset="UTF-8">
 		<title>opendatahacklab - Events to RSS converter</title>
 		<link rel="stylesheet" type="text/css" href="../commons/css/odhl.css" />
-		<link rel="alternate" type="application/rss+xml"  href="rdfevents2rss.php" title="opendatahacklab events feed"></head>
+		<link rel="alternate" type="application/rss+xml"  href="rdfevents2rss.php" title="opendatahacklab events feed">
+	</head>
 <body>
 	<header class="main-header">
 		<img class="logo" src="../commons/imgs/logo_cog4_ter.png" alt="the opendatahacklab logo" />
