moving development to free-agenda

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 		</nav>
 	</header>
 	<section>
+		<p><em>IMPORTANT NOTICE:</em> the development of this project has permanently been moved
+		as part of the <a href="http://opendatahacklab.org/free-agenda">Free Agenda</a>.</p>
+	</section>
+	<section>
 		<header><h2>Description</h2></header>
 		<p><code>rdfevents2rss.php</code> is a PHP script to convert a 
 		set of events (specified using the <a href="http://motools.sourceforge.net/event/event.html">Event Ontology</a>) 
